# fresh_mod

./: .gitignore  CMakeLists.txt  Makefile  fresh_mod.code-workspace  main.cpp  mod.cpp  mod.h  plm.cpp  plm.h  util.h
data/: backup001.xm  mod.amiga-fastest-compo  mod.crack the eggshell!  mod.cubes of silver  mod.elysium  mod.small  mod.terminal fuckup  reach tech-no limit.mod
data/samples/: BASSC.SAM  BASSUB3.SPL  BELLTREE.SPL  BOOM1.SAM  BS3.SPL  CLPHIT1.SPL  CNGHI1.SPL  CYMCSH2.SPL  DLPRAP1.SPL  DLPRAV1.SPL  FEEDCHRD.SAM  GTRMTL4.SPL  HIHATOP1.SAM  HITECHNO.SAM  HRNSML1.SPL  KORGLEAD.PDS  PADMIN1.SPL  PNOTEC1A.SPL  PNOTEC1B.SPL  PNOTEC1C.SPL  RAVENOT3.SAM  REZO2.PDS  SFXELEC1.SPL  SFXKLX2.SPL  SFXREW1.SPL  SPKMAL17.SPL  STR1MIN1.SAM  STR1MIN2.SAM  SUBBASS5.SPL  SWOOSH2.PDS  T303A1.SPL  T303A2.SPL  T303A3.SPL  TECHMTL1.SAM  TECHNO9.SPL  TEMP.SPL  VOCFEM7.SPL  WIND1.SAM
